sass/styles.scss
/* ... */
.wp8, .wp9 {
  -webkit-animation-delay: 0.3s;
  animation-delay: 0.3s
}
.bounceInLeft, .bounceInRight, .fadeInUp, .fadeInUpDelay, .fadeInDown, .fadeInUpD, .fadeInLeft, .fadeInRight, .bounceInDown {
  visibility: visible
}

/* ==========================================================================
Navigation
========================================================================== */
.header-nav.open {
  visibility: visible;
  opacity: 0.9;
  -webkit-transition: opacity 0.5s;
  transition: opacity 0.5s;
}
.nav-toggle {
  position: absolute;
  top: 0;
  right: 15px;
  z-index: 999999;
  padding: 10px 35px 16px 0;
  cursor: pointer
}
.nav-toggle:focus {
  outline: none
}
.nav-toggle span, .nav-toggle span:before, .nav-toggle span:after {
  content: "";
  position: absolute;
  display: block;
  width: 35px;
  height: 3px;
  -moz-border-radius: 1px;
  -webkit-border-radius: 1px;
  border-radius: 1px;
  background: #fff;
  cursor: pointer
}
.nav-toggle span:before {
  top: -10px
}
.nav-toggle span:after {
  bottom: -10px
}
.nav-toggle span, .nav-toggle span:before, .nav-toggle span:after {
  -moz-transition: all 300ms ease-in-out;
  -o-transition: all 300ms ease-in-out;
  -webkit-transition: all 300ms ease-in-out;
  transition: all 300ms ease-in-out
}
.nav-toggle.active span {
  background-color: transparent
}
.nav-toggle.active span:before, .nav-toggle.active span:after {
  top: 0
}
.nav-toggle.active span:before {
  -moz-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  -o-transform: rotate(45deg);
  -webkit-transform: rotate(45deg);
  transform: rotate(45deg)
}
.nav-toggle.active span:after {
  top: 10px;
  -moz-transform: translatey(-10px) rotate(-45deg);
  -ms-transform: translatey(-10px) rotate(-45deg);
  -o-transform: translatey(-10px) rotate(-45deg);
  -webkit-transform: translatey(-10px) rotate(-45deg);
  transform: translatey(-10px) rotate(-45deg)
}
.navicon {
  position: absolute;
  height: 26px;
  right: 10px;
  top: 46px;
  visibility: hidden;
  transition: all 300ms ease-in-out;
}

/* ==========================================================================
Hero
========================================================================== */
.hero {
  min-height: 750px;
  background: url('../img/landscape.jpeg') center center;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
  position: relative;

  /*.rsvp-btn {
    position: absolute;
    bottom: 100px;
    left: 50%;
  }*/
  .down-arrow a {
    color: $txt-light;
  }
  h1 {
    color: $txt-light;
    margin-bottom: 40px;
  }
  p.intro {
    color: $txt-light;
    font-size: 20px;
    font-weight: 300;
    margin-bottom: 80px;
  }
  .hero-content {
    padding-top: 40%;
  }
  .hero-content img {
    width: 55%;
    margin-bottom: 12%;
  }
}
.navigation {
  transition: all 300ms ease-in-out;
  position: fixed;
  width: 100%;
  z-index: 999;
}
.fixed {
  position: fixed;
  background-color: rgba(55, 36, 40, .88);
  z-index: 999;
  width: 100%;
}
header {
  padding: 50px 0;
  border-bottom: solid 1px rgba(255, 255, 255, 0.2);
  position: relative;
  width: 1170px;
  margin: 0 auto;
  transition: padding 300ms ease-in-out;

  a {
    color: $txt-light;
    text-transform: uppercase;
    font-size: $nav-font-size;

    &.login {
      margin-right: 20px;
    }
  }
  .logo {
    display: inline-block;
    vertical-align: middle;
  }
  .logo img {
    height: 55px;
  }
  ul.primary-nav {
    margin: 0 0 0 75px;
    padding: 0;

    li {
      display: inline;

      a {
        color: $txt-light;
        padding-right: 25px;

        &:hover {
          color: $accent-color;
        }
      }
      &:last-child a {
        padding-right: 0px;
      }
    }
  }
  ul.member-actions {
    li {
      display: inline;

      a {
        color: $txt-light;

        &:hover {
          color: $accent-color;
        }
      }
    }
  }
  .header-nav {
    display: inline-block;
    vertical-align: middle;
  }
  .member-actions {
    position: absolute;
    right: 0;
    top: 50px;
    transition: all 300ms ease-in-out;
  }
}
.down-arrow {
  color: #fff;
  font-size: 30px;
  position: absolute;
  bottom: 30px;
  left: 50%;
  transform: translateX(-50%);
}

/* ==========================================================================
Social share buttons
========================================================================== */
.share-bar {
  margin-top: 20px;
}

/* ==========================================================================
Intro
========================================================================== */
.intro span.icon {
  font-size: 40px;
  color: $accent-color;
  font-weight: bold;
}
.intro-icon {
  display: inline-block;
  vertical-align: top;
  padding: 6px 0 0 0;
  margin-right: 20px;
  width: 40px;
}
.intro-content {
  display: inline-block;
  width: 80%;
}

#intro {
  padding-top: 40px;
  img {
    width: 100%;
    height: auto;
  }
}
#intro p {
  text-align: center;
}
/* ... */

